<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:id="@+id/ll_movie_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="0.5">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_full_screen"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                style="@style/DetailsTitle"
                />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsInfo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseDate"
                style="@style/DetailsTitle"
               />
            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsInfo"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average"
                style="@style/DetailsTitle"/>

            <TextView
                android:id="@+id/tv_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsInfo"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:textColor="#000000"
            android:visibility="invisible"
            android:textAlignment="center"/>
    </LinearLayout>


</ScrollView>